 . The "report bug" button only works if you are a member of the Beta Testers group on the MPT forums. Register on the modplug forums and PM Rewbs for access.



2. What's new in this build?
----------------------------
.: bug fix
+: new feature
-: known issue / regression
/: change
?: other
(tx XYZ): thanks to XYZ for telling me about the bug

. v 1.16.0214a
   . <rewbs> fix to allow VST synchronisation when rendering to wav.
   . <rewbs> fix to note playback when pattern record is disabled (tx ganja).
   . <rewbs> fix for VST plugs with >2 outputs, though it is currently assumed they are stereo. (tx Muox, ganja)
   / <rewbs> added button on wave writer dialog to open player settings rather than checkbox to enable "HQ resampling".
   + <rewbs> GUI for resampler & default ramping configuration
   . <ericus> fixed wav export at >44.1kHz and >24bit.
   + <ericus> added per-instrument sample ramping
   + <ericus> Channel manager updates
   + <ericus> Multiple mix modes for plugins
   / <ericus> new internal instrument format
   + <ericus> polyphase resampler tuning and fixes (enabled polyphase on filtered samples...)
   + <rewbs> Added "copy and lose selection" command as a general pattern command, for those who like the cursor to be restored when they copy.
     You obviously don't have to map a key to this command if you don't want to use it.
   + <rewbs> Automatic chord detection, a la Ericus: Assuming you're in a channel with note recording enabled and you have other channels with note recording enabled, if you hit two note keys within a given time, MPT should put the notes on the same row. You can set the interval time in keyboard config dialog.
   . <rewbs> Fixed velocity recording from midi in. (tx Squirrel Havoc)
   . <rewbs> Fixed stuck notes when playing VSTis from pattern in record enabled channels.
   . <rewbs> Fixed file corruption bug on saving after deleting an instrument (tx LPChip)